--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@telegram-apps/telegram-ui": "^2.1.8",
     "@twa-dev/sdk": "^8.0.1",
     "next": "15.1.2",
     "next-twa": "^1.2.0",
